force-app/main/default/objects/RSI_Insurance_Policy_Participant_Asset__c/RSI_Insurance_Policy_Participant_Asset__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy Participant Asset</label>
    <nameField>
        <displayFormat>PPAN-{00000}</displayFormat>
        <label>Policy Participant Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Policy Participant Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>