force-app/main/default/objects/RSI_Insurance_Policy_Participant_Asset__c/fields/RSI_Policy_Participant__c.field-meta.xml
<CustomField>
    <fullName>RSI_Policy_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Participant</label>
    <referenceTo>RSI_Insurance_Policy_Participant__c</referenceTo>
    <relationshipLabel>Insurance Policy Participant Assets</relationshipLabel>
    <relationshipName>Insurance_Policy_Participant_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>