force-app/main/default/objects/RSI_Insurance_Policy_Participant_Asset__c/fields/RSI_Policy_Participant_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>RSI_Policy_Participant_Asset_Number__c</fullName>
    <displayFormat>PPAN-{00000}</displayFormat>
    <label>Policy Participant Asset Number</label>
    <type>AutoNumber</type>
</CustomField>